<resources>
    <string name="app_name">iWasThere</string>
    <string name="splash_text">initialiseren</string>

    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Sluit menu</string>

    <!--
    //
    // START ACTIVITIES
    //
    -->

    <!-- StudentSelectActivity -->
    <string name="student_label">Wie ben je?</string>
    <string name="name_placeholder">John Doe</string>
    <string name="select_proceed">Ga verder</string>

    <!-- StudentSignatureActivity -->
    <string name="signature_submit">Bevestigen</string>
    <string name="signature_reset">Wissen</string>
    <string name="signature_saved">Handtekening opgeslagen!</string>

    <string name="privacyalert_title">Privacy waarschuwing</string>
    <string name="privacyalert_message">Wanneer je verder gaat zal de app de camera gebruiken om gezichtsherkenning toe te passen. Ook zal je locatie worden meegestuurd. Dit is vereist voor een correcte registratie.</string>
    <string name="privacyalert_message_location">Wanneer je verder gaat zal de app je locatie opvragen en meesturen. Dit is vereist voor een correcte registratie.</string>
    <string name="privacyalert_positive">Oke</string>
    <string name="privacyalert_negative">Dit wil ik niet</string>

    <!-- SignatureDoneActivity -->
    <string name="signature_done">Je bent successvol geregistreerd!</string>
    <string name="signature_startover">Nieuwe registratie</string>

    <!-- Activity titles (shown in the action bar) -->
    <string name="title_student_select">Even kennis maken</string>
    <string name="title_student_signature">Hallo %1$s, even je kribbel zetten</string>
    <string name="title_signature_done">Helemaal klaar!</string>

    <!-- Admin AuthenticateActivity -->
    <string name="admin_authenticate_label">Inloggen</string>
    <string name="admin_incorrect_password">Onjuist wachtwoord ingevuld!</string>

    <!-- Admin DashboardActivity -->
    <string name="admin_dashboard_label">Beheer</string>

    <!-- PermissionErrorActivity -->
    <string name="permission_error">De app moet toegang hebben tot je locatie.</string>
    <string name="permission_error_sub">Geef de app toegang tot je locatie om verder te kunnen.</string>
    <string name="permission_retry">Open instellingen</string>

    <!-- Admin StudentAddActivity -->
    <string name="btn_add">Toevoegen</string>
    <string name="add_label">Naam (voor + achternaam)</string>
    <string name="add_hint">Gescheiden door komma of new line</string>
    <string name="format_hint">Formaat: {s-nummer};{voornaam achternaam}</string>

    <string name="dialog_student_exists_title">Bestaand student</string>
    <string name="dialog_student_exists_message">Een student met dit studentennummer bestaat reeds!</string>

    <!-- Admin: Student/SignatureOverviewActivity -->
    <string name="filter_name">Filter</string>
    <string name="switch_invalid_locations">Locatie niet on-campus</string>

    <!-- Admin StudentDetailActivity -->
    <string name="label_last_signatures">Laatste handtekeningen</string>
    <string name="button_all_signatures">Alle handtekeningen</string>
    <string name="button_delete_student">Verwijder student</string>

    <!-- Admin AppSettingsActivity -->
    <string name="label_change_password">Wachtwoord aanpassen</string>
    <string name="button_save_changes">Wachtwoord opslaan</string>
    <string name="label_togglefacialdetection">Gezichtsherkenning ingeschakeld</string>
    <string name="wipe_database">Database legen</string>

    <!--
    //
    // END ACTIVITIES
    //
    -->

    <!-- Errors -->
    <string name="intent_error">Er is een fout opgetreden. Kon activity niet starten.</string>
    <string name="invalid_student">De opgegeven student bestaat niet.</string>
    <string name="snackbar_text">Je bent offline. Verbind met het internet om de app te blijven gebruiken.</string>

    <string name="signature_error">Er is iets fout gegaan tijdens het verwerken van je handtekening!</string>
    <string name="signature_empty">Je hebt geen handtekening gezet!</string>

    <string name="database_error">Er is iets fout gegaan tijdens het ophalen van de data!</string>

    <!-- General drawer menu -->
    <string name="item_admin">Beheer</string>
    <string name="item_start">Start</string>

    <!-- Admin drawer menu -->
    <string name="menu_students_title">Studenten</string>
    <string name="menu_misc_title">Overige</string>

    <string name="item_student_add">Student toevoegen</string>
    <string name="item_signatures">Handtekeningen</string>

    <string name="item_misc">App instellingen</string>

    <string name="admin_dashboard_subtitle">Selecteer een actie uit het menu.</string>
    <string name="admin_signout">Uitloggen</string>

    <string name="authenticate_password">Wachtwoord</string>
    <string name="authenticate_login">Inloggen</string>

    <string name="settings_saved">Instellingen opgeslagen!</string>
    <string name="settings_password_invalid">Je hebt geen (geldig) wachtwoord ingevuld!</string>
    <string name="settings_database_wiped">Database leeggemaakt!</string>
    <string name="dialog_confirm_title">Bevestigen</string>

    <string name="dialog_confirm_message">Ben je zeker? Dit kan niet ongedaan worden gemaakt.</string>
    <string name="dialog_positive">Ja</string>
    <string name="dialog_negative">Nee</string>

    <string name="dialog_positive_ok">Oke</string>
    <string name="dialog_negative_cancel">Annuleer</string>


</resources>