<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center_horizontal"
    android:id="@+id/layoutStudentSelect"
    tools:context=".activities.student.StudentSelectActivity">

    <TextView
        android:id="@+id/lblStudentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/student_label"
        android:textColor="@color/apGreyDark"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/txtStudentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblStudentInput"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:hint="@string/name_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStudentInput">

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/btnStudentSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentList" />

</androidx.constraintlayout.widget.ConstraintLayout>